# pyproject-cli

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/pyproject_cli/: __main__.py  cli.py  utils.py
src/pyproject_cli/templates/: __init__.py  black.py  black.toml.j2  justfile.j2  justfile.py  pre-commit-config.yaml.j2  pre_commit_config.py  pyproject.py  ruff.py  ruff.toml.j2
