[tool.poetry]
name = "pyproject-cli"
version = "0.1.0"
description = "CLI tool for settingup and managing a python project."
authors = ["Yuki Nagato <37764578+YUKI2eN3e@users.noreply.github.com>"]
packages = [
	{ include = "pyproject_cli", from = "src" }
]
readme = "README.md"

[tool.poetry.scripts]
pyproject-cli = "pyproject_cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.3"
rich-argparse = "^1.4.0"
argcomplete = "^3.2.2"
tomlkit = "^0.12.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ipython = "^8.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I"]
ignore = ["E402"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.isort]
case-sensitive = true

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"